--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@ bin/
 
 #hibernate
 hibernate.cfg.xml
+
+public interface APICredentials {
+
+	String CLIENT_ID = "xxxxxxxxxx";
+	String CLIENT_SECRET = "xxxxxxxxxxxxxx";
+	
+	
+
+}
