--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
 			<artifactId>json</artifactId>
 			<version>20140107</version>
 		</dependency>
+        <dependency>
+            <groupId>com.mailjet</groupId>
+            <artifactId>mailjet-client</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+    
 		
 			<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
